[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview"
version = "0.1.0"
description = "Read-Only System Viewer Surfaces for LegiVellum Meshes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interview"]
